fix overlapping list-group

--- a/src/App.scss
+++ b/src/App.scss
@@ -16,10 +16,12 @@ body {
   font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  // z-index: 1;
 }
 
 .sticky-top {
-  position: -webkit-sticky !important
+  position: -webkit-sticky !important;
+  z-index: 0;
 }
 
 #spacer {
